<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        tools:context=".MainActivity">


        <ImageView
            android:id="@+id/ic_cost_of_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_store"
            app:layout_constraintBottom_toBottomOf="@+id/tilCostOfService"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tilCostOfService" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilCostOfService"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:hint="@string/cost_of_service"
            app:layout_constraintStart_toEndOf="@id/ic_cost_of_service"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCostOfService"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>


        <ImageView
            android:id="@+id/ic_service_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_service"
            app:layout_constraintBottom_toBottomOf="@id/tvServiceQuestion"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvServiceQuestion" />

        <TextView
            android:id="@+id/tvServiceQuestion"
            style="@style/Widget.TipCalculator.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/how_was_the_service"
            app:layout_constraintStart_toStartOf="@id/tilCostOfService"
            app:layout_constraintTop_toBottomOf="@id/tilCostOfService" />

        <RadioGroup
            android:id="@+id/rgTipOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@id/rbOptionEighteenPercent"
            app:layout_constraintStart_toStartOf="@id/tvServiceQuestion"
            app:layout_constraintTop_toBottomOf="@id/tvServiceQuestion">

            <!-- add RadioButtons here -->
            <RadioButton
                android:id="@+id/rbOptionTwentyPercent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amazing_service" />

            <RadioButton
                android:id="@+id/rbOptionEighteenPercent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/good_service" />

            <RadioButton
                android:id="@+id/rbOptionFifteenPercent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok_service" />

        </RadioGroup>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_round_up"
            app:layout_constraintBottom_toBottomOf="@id/swRoundUp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/swRoundUp" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/swRoundUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/round_up_tip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/rgTipOptions"
            app:layout_constraintTop_toBottomOf="@+id/rgTipOptions" />

        <Button
            android:id="@+id/btCalculate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:text="@string/calculate"
            app:layout_constraintEnd_toEndOf="@id/swRoundUp"
            app:layout_constraintStart_toStartOf="@id/swRoundUp"
            app:layout_constraintTop_toBottomOf="@id/swRoundUp" />

        <TextView
            android:id="@+id/tvTipResult"
            style="@style/Widget.TipCalculator.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btCalculate"
            tools:text="@string/tip_amount" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>